--- a/index.html
+++ b/index.html
@@ -10,11 +10,38 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <script src="assets/javascript/app.js"></script>
+    <div class="container">
+        <div class="page-header">
+            <h1>Harry Potter Trivia</h1>
+        </div>
+    </div>
+    <div class="container">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header text-light">
+                    <h3>Timer <span class="timer bg-secondary" id="timer"></span></h3>
+                </div>
+                <div class="modal-body">
+                    <h3 id="question" class="text-light">What house at Hogwarts does Harry belong to?
+                    </h3>
 
+                    <div class="quiz" id="choices">
+                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice1">1</span></button>
+                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice2">2</span></button>
+                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice3">3</span></button>
+                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice4">4</span></button>
+                    </div>
+                </div>
+                <script src="assets/javascript/app.js"></script>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
