got timer working

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -21,27 +27,35 @@
             <h1>Harry Potter Trivia</h1>
         </div>
     </div>
-    <div class="container">
-        <div class="modal-dialog">
+    <div class="start-container" id="start-container">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
-                <div class="modal-header text-light">
-                    <h3>Timer <span class="timer bg-secondary" id="timer"></span></h3>
-                </div>
-                <div class="modal-body">
-                    <h3 id="question" class="text-light">What house at Hogwarts does Harry belong to?
-                    </h3>
-
-                    <div class="quiz" id="choices">
-                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice1">1</span></button>
-                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice2">2</span></button>
-                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice3">3</span></button>
-                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice4">4</span></button>
-                    </div>
-                </div>
-                <script src="assets/javascript/app.js"></script>
+                <button class="btn btn-lg btn-secondary" id="start">Start!</button>
             </div>
         </div>
     </div>
+    <div class="game-container" id="game-container">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header text-light">
+                    <h3>Time remaining:   <span class="timer" id="timer"></span></h3>
+                </div>
+                <div class="modal-body">
+                    <h3 id="question" class="text-light"></h3>
+                    <h2 id="correct-answer" class="text-light"></h2>
+                    <div id="choices">
+                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice1" value="1"></span></button>
+                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice2" value="2"></span></button>
+                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice3" value="3"></span></button>
+                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice4" value="4"></span></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
