--- a/index.html
+++ b/index.html
@@ -38,24 +38,41 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header text-light">
-                    <h3>Time remaining:   <span class="timer" id="timer"></span></h3>
+                    <h3>Time remaining: <span class="timer" id="timer"></span></h3>
                 </div>
                 <div class="modal-body">
                     <h3 id="question" class="text-light"></h3>
                     <h2 id="correct-answer" class="text-light"></h2>
                     <div id="choices">
-                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice1" value="1"></span></button>
-                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice2" value="2"></span></button>
-                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice3" value="3"></span></button>
-                        <button class="btn btn-lg btn-secondary btn-block"><span id="choice4" value="4"></span></button>
+                        <button class="choice btn btn-lg btn-secondary btn-block" id="1" onclick="checkGuess(1)"
+                            value="1"><span id="choice1" value="1"></span></button>
+                        <button class="choice btn btn-lg btn-secondary btn-block" id="2" onclick="checkGuess(2)"
+                            value="2"><span id="choice2" value="2"></span></button>
+                        <button class="choice btn btn-lg btn-secondary btn-block" id="3" onclick="checkGuess(3)"
+                            value="3"><span id="choice3" value="3"></span></button>
+                        <button class="choice btn btn-lg btn-secondary btn-block" id="4" onclick="checkGuess(4)"
+                            value="4"><span id="choice4" value="4"></span></button>
+                    </div>
+                    <img class="img-thumbnail" id="correct-img" src="assets/images/correct.jpg"></img>
+                    <img class="img-thumbnail" id="incorrect-img" src="assets/images/incorrect.jpg"></img>
+                    <img class="img-thumbnail" id="timesup-img" src="assets/images/timesup.jpg"></img>
+                    <img class="img-thumbnail" id="gameover-img" src="assets/images/end.jpg"></img>
+                </div>
+                <div>
+                    <div class="modal-body" id="score">
+                        <h3 id ="right" class="text-light"></h3>
+                        <h3 id ="wrong" class="text-light"></h3>
+                        <h3 id ="outoftime" class="text-light"></h3>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    </div>
 
 
-    <script src="assets/javascript/app.js"></script>
+    <script type="text/javascript" src="assets/javascript/app.js">
+    </script>
 </body>
 
 </html>
