--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="start-container" id="start-container">
-        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-dialog">
             <div class="modal-content">
                 <button class="btn btn-lg btn-secondary" id="start">Start!</button>
             </div>
@@ -42,7 +42,7 @@
                 </div>
                 <div class="modal-body">
                     <h3 id="question" class="text-light"></h3>
-                    <h2 id="correct-answer" class="text-light"></h2>
+                    <h3 id="correct-answer" class="text-light"></h3>
                     <div id="choices">
                         <button class="choice btn btn-lg btn-secondary btn-block" id="1" onclick="checkGuess(1)"
                             value="1"><span id="choice1" value="1"></span></button>
@@ -56,20 +56,18 @@
                     <img class="img-thumbnail" id="correct-img" src="assets/images/correct.jpg"></img>
                     <img class="img-thumbnail" id="incorrect-img" src="assets/images/incorrect.jpg"></img>
                     <img class="img-thumbnail" id="timesup-img" src="assets/images/timesup.jpg"></img>
-                    <img class="img-thumbnail" id="gameover-img" src="assets/images/end.jpg"></img>
                 </div>
-                <div>
-                    <div class="modal-body" id="score">
-                        <h3 id ="right" class="text-light"></h3>
-                        <h3 id ="wrong" class="text-light"></h3>
-                        <h3 id ="outoftime" class="text-light"></h3>
-                    </div>
+                <div class="modal-body text-light" id="score">                    
+                    <img class="img-thumbnail" id="gameover-img" src="assets/images/end.jpg"></img>
+                    <h3 id="right"></h3>
+                    <h3 id="wrong"></h3>
+                    <h3 id="outoftime"></h3>
+                    <h3>Want to try again?</h3>
+                    <button class="btn btn-lg btn-secondary" id="start-over">Start over!</button>
                 </div>
             </div>
         </div>
     </div>
-    </div>
-
 
     <script type="text/javascript" src="assets/javascript/app.js">
     </script>
