--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="modal-header text-light">
                     <h3>Time remaining: <span class="timer" id="timer"></span></h3>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" id="questions-answers">
                     <h3 id="question" class="text-light"></h3>
                     <h3 id="correct-answer" class="text-light"></h3>
                     <div id="choices">
@@ -57,16 +57,16 @@
                     <img class="img-thumbnail" id="incorrect-img" src="assets/images/incorrect.jpg"></img>
                     <img class="img-thumbnail" id="timesup-img" src="assets/images/timesup.jpg"></img>
                 </div>
-                <div class="modal-body text-light" id="score">                    
-                    <img class="img-thumbnail" id="gameover-img" src="assets/images/end.jpg"></img>
-                    <h3 id="right"></h3>
-                    <h3 id="wrong"></h3>
-                    <h3 id="outoftime"></h3>
-                    <h3>Want to try again?</h3>
-                    <button class="btn btn-lg btn-secondary" id="start-over">Start over!</button>
-                </div>
             </div>
         </div>
+    </div>
+    <div class="modal-body text-light" id="score">
+        <img class="img-thumbnail" id="gameover-img" src="assets/images/end.jpg"></img>
+        <h3 id="right"></h3>
+        <h3 id="wrong"></h3>
+        <h3 id="outoftime"></h3>
+        <h3>Want to try again?</h3>
+        <button class="btn btn-lg btn-secondary" id="start-over">Start over!</button>
     </div>
 
     <script type="text/javascript" src="assets/javascript/app.js">
